# OpenSourceControlledEnvironments

./: .env.example  .gitignore  AGENTS.md  AGENTS.yaml  CHANGELOG.md  FreightFarmHarmony.py  GaiaEcoSystem.py  LICENSE  Makefile  PulseMesh.py  PulseROSGardener.py  README.md  ROADMAP.md  agents-md-v21.md  agritherapy_and_enhancements.patch  basic_example.md  community_files.md  comparison(1).md  comparison.md  complete_farm_control.json  config.txt  debug_script.sh  dependency_management.py  docker_deployment.txt  educational_setup.md  ethics_page.md  farm_setup.sh  final_readme.txt  first_plugin.py  freight_farm_harmony.py  github_actions.md  github_issue_templates.md  github_setup.md  hardware_compatibility.md  hardware_setup_page.md  hivemind-fft-v2.py  hydroponic_system.json  improved_readme.md  index.md  install.sh  (+43 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  hardware_compatibility.md  support_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  docs-deploy.yml  security-scan.yml  test.yml
api/: rest_api.py
api/docs/: authentication.md  openapi.yaml  security.md
api/middleware/: rate_limiting.py  validation.py
config/: config.txt  default.yaml  default_config.yaml  educator.yaml  technician.yaml
config/crops/: leafy_greens.json
config/fail2ban/: jail.local
config/profiles/: educator.json
config/systems/: basic_monitoring.json
dashboards/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: README_CONTAINER.md  hardware_starter_kits.md  improved_readme.md  privacy_statement.md  regional_adaptation.md  troubleshooting.md  use_case_showcases.md  user_guide.md
docs/community/: community_files.md  customizing_roles.md  github_issue_templates.md  readme_github_pages.md
docs/developer/: plugin_api.md
docs/educational/: educational_setup.md
docs/legal/: license_guide.md
docs/osce/: AGENTS.md  README_OSCE.md  REPO_STRUCTURE.md
docs/roadmaps/: comprehensive_update.md  immediate_roadmap.md
docs/technical/: architecture.md  deployment.md  directory_setup.md  hardware_setup_page.md  phased_upgrade_roadmap.md
docs/therapeutic/: therapeutic_setup.md
docs/user_guides/: final_readme.txt  importing_guide.md  (+4 more)
plugins/: example_plugin.py
scripts/: backup_system.sh  docker-deploy.sh  install_dependencies.py
setup/: README.md  commercial_setup.sh  setup.sh  wizard.sh
static/: dashboard.html
(+65 files in other folders)
